--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Lights Out</string>
+    <string name="game_title">Lights Out</string>
+    <string name="game_description">Can you turn all the lights off?</string>
+    <string name="start_game_button_text">Start Randomized Game</string>
 </resources>
