--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="game_title">Lights Out</string>
     <string name="game_description">Can you turn all the lights off?</string>
     <string name="start_game_button_text">Start Game</string>
-    <string name="winning_text">You Won! Quite Excellent!</string>
+    <string name="winning_text">You Won! Excellent!</string>
+    <string name="start_over_button_text">Start Over</string>
 </resources>
