--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="start_game_button_text">Start Game</string>
     <string name="winning_text">You Won! Excellent!</string>
     <string name="start_over_button_text">Start Over</string>
+    <string name="number_to_beat_text">The number to beat was %1$d</string>
+    <string name="number_of_moves_taken_text">It took you %1$d moves to win</string>
 </resources>
